# ISS-limesurvey-manager

./: .gitignore  LSCon.py  LSHelper.py  LS_manager.ui  ParticipantData.py  Pipfile  README.md  app.py  config.py  constants.py  file_manager.py  forms_config.json  gestor_windows.bat  limesurvey_manager.py  main.py  model.py  pyproject.toml  question_test.json  send_invites.sh
app/: ParticipantData.py  app.py  config.py  credentials.py  exceptions.py  model.py  searchData.py
app/ui/: main_window.py  main_window.ui  search_form.py  search_form.ui
limesurvey_manager/: manage.py
limesurvey_manager/credentials/: credentials.py
limesurvey_manager/export_participant_files/: export_files.py  main.py
limesurvey_manager/send_invitations/: main.py
tests/: test_credentials.py  test_functional.py  test_surveys.py
ui/: eng-cat.qm  eng-cat.ts  main_window.py
