[tool.poetry]
name = "limesurvey-manager"
version = "0.2.0"
description = "Manage Institut Salvador Segui's Limesurvey environment."
authors = ["Miquel Caamaño Salom <kamanyo@gmailcom>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"
python-dotenv = "^1.0.1"
limesurveyrc2api = "^2.0.0"

[tool.pytest.ini_options]
pythonpath = "."

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
portray = "^1.8.0"
python-lsp-ruff = "^2.1.0"
python-lsp-isort = "^0.1"
pudb = "^2024.1"
pylsp-mypy = "^0.6.8"
python-lsp-black = "^2.0.0"
pytest-pudb = "^0.7.0"
pylsp-autoimport = "^0.1.0"

[tool.portray]
modules = ["limesurvey_manager"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
